# powr

./: .dvcignore  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  data.dvc  dvc.yaml  exercise.ipynb  logging_config.ini  main.py  pyproject.toml
.dvc/: config
.github/workflows/: ci.yml
config/: config.py
data/: raw.dvc
data/raw/: 2022-April.csv  2022-August.csv  2022-June.csv  2022-March.csv
docker/: dev.Dockerfile
notebooks/: 01_Data_Cleaning.ipynb  02_Data_Cleaning_Time.ipynb  03_Data_Preprocessing.ipynb  03_Modelling.ipynb
notebooks/archive/: 02_Data_Preprocess.ipynb
powr/: data.py  evaluate.py  predict.py  train.py  utils.py  window.py
tests/code/: test_data.py  test_utils.py
