[tool.poetry]
name = "powr"
version = "0.1.0"
description = "Power Consumption predictor"
authors = ["Surya Avala <suryaavala.dev@gmail.com>"]
maintainers = ["Surya Avala <suryaavala.dev@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/suryaavala/powr"
packages = [
    { include = "powr" },
]

[tool.poetry.dependencies]
python = "==3.10.7"
matplotlib = "^3.6.1"
numpy = "^1.23.4"
pandas = "^1.5.1"
seaborn = "^0.12.0"
tensorflow = "^2.10.0"

# NOTE: optional dependencies for extras

# docs packages
mkdocs = {version = "^1.4.2", optional = true}
mkdocstrings = {version = "^0.19.0", optional = true}

# test packages
pytest = { version = "^7.2.0", optional = true }
pytest-cov = {version = "^4.0.0", optional = true}
great-expectations = {version = "^0.15.31", optional = true}

# lint packages
black = { version = "^22.10.0", optional = true }
flake8 = { version = "^5.0.4", optional = true }
mypy = { version = "^0.982", optional = true }
isort = {version = "^5.10.1", optional = true}
bandit = { version = "^1.7.4", optional = true }

# dev packages
pre-commit = { version = "^2.20.0", optional = true }
dvc = "^2.33.2"

[tool.poetry.extras]
docs = ["mkdocs", "mkdocstrings"]
test = ["pytest", "pytest-cov", "great-expectations"]
lint = ["black", "flake8", "mypy", "isort", "bandit"]
dev = ["pre-commit", "mkdocs", "mkdocstrings", "pytest", "pytest-cov", "great-expectations", "black", "flake8", "mypy", "isort", "bandit"]

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

# isort config
[tool.isort]
profile = "black"

# pytest config
[tool.pytest.ini_options]
testpaths = ["tests/"]
python_files = "test_*.py"
addopts = ["-vvv", "--strict-markers", "--disable-pytest-warnings", "--color=yes", "--capture=tee-sys", "--cov-fail-under=100", "--cov-report=term-missing", "--cov=powr"]
markers = [
    "training: tests that involve training",
]

# pytest coverage config
[tool.coverage.run]
source = ["powr"]
omit = ["*/__init__.py", "tests/*"]
# omit = ["app/gunicorn.py"]

# mypy config
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["matplotlib", "numpy", "pandas", "seaborn", "tensorflow"]
ignore_missing_imports = true
